<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/textColorSecondaryInverse">
<!--    android:background="?android:attr/textColorSecondaryInverse"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/custom_group_popup"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:elevation="20dp">

        <TextView
            android:id="@+id/popupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/popup_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/edtGrName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/name_hint"
                android:paddingStart="5dp"
                android:background="@drawable/custom_input"/>

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtGrPassword"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:hint="@string/password_hint"
                android:background="@drawable/custom_input"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/btnCansel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:text="@string/btn_cansel" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:text="@string/btn_accept" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>